--- a/assets/scss/molecules/_sweet-alert.scss
+++ b/assets/scss/molecules/_sweet-alert.scss
@@ -65,7 +65,7 @@
 	.swal2-title {
 		line-height: 1.3;
 		font-size: 23px;
-		color: var(--main-text);
+		color: var(--main-title);
 		
 		small {
 			flex-basis: 100%;
