--- a/assets/css/atum-list.css
+++ b/assets/css/atum-list.css
@@ -4095,7 +4095,7 @@ body.running-atum-help-guide .atum-help-marker.active:before, body.running-atum-
 .swal2-container .swal2-title {
   line-height: 1.3;
   font-size: 23px;
-  color: var(--main-text);
+  color: var(--main-title);
 }
 .swal2-container .swal2-title small {
   -ms-flex-preferred-size: 100%;
@@ -6264,9 +6264,11 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   color: var(--atum-table-link-text);
 }
 .swal2-container.atum-modal .swal2-title {
-  color: var(--atum-text-modal-title);
+  color: var(--main-title);
   font-size: 18px;
   text-align: left;
+  padding-left: 1.1em;
+  padding-right: 1.1em;
 }
 .swal2-container.atum-modal .swal2-html-container {
   margin-top: 0;
@@ -6333,7 +6335,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   text-align: left;
   padding-left: 20px;
   font-size: 14px;
-  color: var(--atum-text-modal-title) !important;
+  color: var(--main-title) !important;
   margin-bottom: 10px;
 }
 .swal2-container.atum-modal .atum-modal-content form .input-group {
