--- a/assets/css/atum-marketing-popup.css
+++ b/assets/css/atum-marketing-popup.css
@@ -1939,7 +1939,7 @@ input[type=button].btn-block {
 .swal2-container .swal2-title {
   line-height: 1.3;
   font-size: 23px;
-  color: var(--main-text);
+  color: var(--main-title);
 }
 .swal2-container .swal2-title small {
   -ms-flex-preferred-size: 100%;
