Fixed font color in large variation names in SC

--- a/assets/css/atum-dashboard.css
+++ b/assets/css/atum-dashboard.css
@@ -476,7 +476,7 @@
   --atum-table-bg: #fff;
   --atum-table-bg2: #f8f9fa;
   --atum-table-filter-dropdown: #6c757d;
-  --atum-table-link-text: #6c757d;
+  --atum-table-link-text: #00B8DB;
   --atum-table-row-variation-text: #fff;
   --atum-table-search-submit-bg: #adb5bd;
   --atum-table-search-text-disabled: #ced4da;
