--- a/assets/scss/common/_root.scss
+++ b/assets/scss/common/_root.scss
@@ -64,7 +64,7 @@
 	--atum-table-bg: #{$white};
 	--atum-table-bg2: #{$light};
 	--atum-table-filter-dropdown: #{$gray-600};
-	--atum-table-link-text: #{$gray-600};
+	--atum-table-link-text: #{$primary};
 	--atum-table-row-variation-text: #{$white};
 	--atum-table-search-submit-bg: #{$gray-500};
 	--atum-table-search-text-disabled: #{$gray-400};
