--- a/assets/scss/molecules/_sweet-alert.scss
+++ b/assets/scss/molecules/_sweet-alert.scss
@@ -120,6 +120,7 @@
 			padding: 9px 19px;
 			font-size: 13px;
 			letter-spacing: 1px;
+			background-image: none !important;
 			
 			&.swal2-confirm {
 				background-color: var(--primary);
