--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -3517,6 +3517,7 @@ h2 .atum-help-tip {
   padding: 9px 19px;
   font-size: 13px;
   letter-spacing: 1px;
+  background-image: none !important;
 }
 .swal2-container .swal2-modal button.swal2-confirm {
   background-color: var(--primary);
