--- a/assets/scss/organisms/pages/_dashboard.scss
+++ b/assets/scss/organisms/pages/_dashboard.scss
@@ -178,7 +178,7 @@ body.toplevel_page_atum-dashboard {
 				width: 100%;
 				min-height: 200px;
 				margin: 20px 30px 0;
-				background-color: var(--dash-card-bg) !important;
+				background-color: var(--dash-card-bg);
 				background-size: cover !important;
 				
 				&.wide {
