--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -3137,6 +3137,8 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   display: inline-block;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 .wrap h1.wp-heading-inline .page-title-action.extend-list-table, .wrap h1.wp-heading-inline .page-title-action:active.extend-list-table {
   font-size: 12px;
@@ -3925,6 +3927,10 @@ body.allow-multiple-suppliers .wc-backbone-modal .alert {
 }
 .select2-container.atum-select2:focus, .select2-container.atum-select2 .selection:focus, .select2-container.atum-select2 .select2-selection--single:focus, .select2-container.atum-enhanced-select:focus, .select2-container.atum-enhanced-select .selection:focus, .select2-container.atum-enhanced-select .select2-selection--single:focus {
   outline: none;
+}
+
+#atum-help-guide-link-wrap {
+  margin-top: -5px !important;
 }
 
 #atum_order_data .hndle, #atum_order_data .handlediv, #atum_order_data .postbox-header {
