--- a/assets/scss/molecules/_popovers.scss
+++ b/assets/scss/molecules/_popovers.scss
@@ -1,3 +1,4 @@
+@use "../common/functions" as *;
 @use "../common/variables" as *;
 @use "../common/mixins/reset-text" as *;
 @use "../common/mixins/rfs" as *;
