--- a/assets/scss/common/mixins/_buttons.scss
+++ b/assets/scss/common/mixins/_buttons.scss
@@ -1,3 +1,7 @@
+@use "../functions" as *;
+@use "../variables" as *;
+@use "hover" as *;
+
 // Button variants
 //
 // Easily pump out default styles, as well as :hover, :focus, :active,
