--- a/assets/scss/common/mixins/_grid.scss
+++ b/assets/scss/common/mixins/_grid.scss
@@ -1,3 +1,6 @@
+@use "../variables";
+@use "breakpoints" as *;
+
 //
 // Grid system (Bootstrap 4)
 //--------------------------
@@ -43,14 +46,14 @@
 }
 
 @mixin make-col($size, $columns: $grid-columns) {
-	flex: 0 0 percentage(math.div($size, $columns));
+	flex: 0 0 math.percentage(math.div($size, $columns));
 	// Add a `max-width` to ensure content within each column does not blow out
 	// the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
 	// do not appear to require this.
-	max-width: percentage(math.div($size, $columns));
+	max-width: math.percentage(math.div($size, $columns));
 }
 
 @mixin make-col-offset($size, $columns: $grid-columns) {
 	$num: math.div($sizem, $columns);
-	margin-left: if($num == 0, 0, percentage($num));
+	margin-left: if($num == 0, 0, math.percentage($num));
 }
