--- a/assets/scss/molecules/_popovers.scss
+++ b/assets/scss/molecules/_popovers.scss
@@ -1,3 +1,9 @@
+@use "../common/functions" as *;
+@use "../common/mixins/border-radius" as *;
+@use "../common/mixins/reset-text" as *;
+@use "../common/mixins/rfs" as *;
+@use "../common/variables" as *;
+
 //
 // Bootstrap Popovers
 // --------------------------------------------------
@@ -74,7 +80,7 @@
 .bs-popover-top {
 	
 	> .popover-arrow {
-		bottom: subtract(-$popover-arrow-height, $popover-border-width);
+		bottom: subtract(-($popover-arrow-height), $popover-border-width);
 		
 		&::before {
 			bottom: 0;
@@ -115,7 +121,7 @@
 .bs-popover-bottom {
 	
 	> .popover-arrow {
-		top: subtract(-$popover-arrow-height, $popover-border-width);
+		top: subtract(-($popover-arrow-height), $popover-border-width);
 		
 		&::before {
 			top: 0;
@@ -137,7 +143,7 @@
 		left: 50%;
 		display: block;
 		width: $popover-arrow-width;
-		margin-left: -$popover-arrow-width * .5;
+		margin-left: -($popover-arrow-width) * .5;
 		content: "";
 		border-bottom: $popover-border-width solid $popover-header-bg;
 	}
@@ -146,7 +152,7 @@
 .bs-popover-start {
 	
 	> .popover-arrow {
-		right: subtract(-$popover-arrow-height, $popover-border-width);
+		right: subtract(-($popover-arrow-height), $popover-border-width);
 		width: $popover-arrow-height;
 		height: $popover-arrow-width;
 		
