--- a/assets/css/atum-addons-rtl.css
+++ b/assets/css/atum-addons-rtl.css
@@ -18,5 +18,4 @@
 }
 .atum-addons .theme .theme-actions {
   right: auto;
-}
-/*# sourceMappingURL=atum-addons-rtl.css.map */
+}/*# sourceMappingURL=atum-addons-rtl.css.map */
