--- a/assets/css/atum-addons.css
+++ b/assets/css/atum-addons.css
@@ -4097,5 +4097,4 @@ html {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
-}
-/*# sourceMappingURL=atum-addons.css.map */
+}/*# sourceMappingURL=atum-addons.css.map */
