--- a/assets/css/atum-admin-modals.css
+++ b/assets/css/atum-admin-modals.css
@@ -2694,5 +2694,4 @@ input[type=button].btn-block {
 }
 .atum-trial-modal .swal2-footer a {
   color: #00B8DB !important;
-}
-/*# sourceMappingURL=atum-admin-modals.css.map */
+}/*# sourceMappingURL=atum-admin-modals.css.map */
