--- a/assets/css/atum-check-orders.css
+++ b/assets/css/atum-check-orders.css
@@ -1127,5 +1127,4 @@
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
-}
-/*# sourceMappingURL=atum-check-orders.css.map */
+}/*# sourceMappingURL=atum-check-orders.css.map */
