--- a/assets/css/atum-dashboard-rtl.css
+++ b/assets/css/atum-dashboard-rtl.css
@@ -117,5 +117,4 @@
 }
 .videos-widget .video-preview .video-player {
   text-align: right;
-}
-/*# sourceMappingURL=atum-dashboard-rtl.css.map */
+}/*# sourceMappingURL=atum-dashboard-rtl.css.map */
