--- a/assets/css/atum-dashboard.css
+++ b/assets/css/atum-dashboard.css
@@ -6203,5 +6203,4 @@ body.toplevel_page_atum-dashboard #wpbody-content > .notice-error, body.toplevel
   display: block;
   overflow: hidden;
   max-height: 41px;
-}
-/*# sourceMappingURL=atum-dashboard.css.map */
+}/*# sourceMappingURL=atum-dashboard.css.map */
