--- a/assets/css/atum-icons.css
+++ b/assets/css/atum-icons.css
@@ -947,5 +947,4 @@
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
-}
-/*# sourceMappingURL=atum-icons.css.map */
+}/*# sourceMappingURL=atum-icons.css.map */
