--- a/assets/css/atum-list.css
+++ b/assets/css/atum-list.css
@@ -9118,5 +9118,4 @@ table.wp-list-table .column-groups th.actions, .floatThead-container .column-gro
   .wrap .wp-heading-inline a.page-title-action {
     padding: 0 12px;
   }
-}
-/*# sourceMappingURL=atum-list.css.map */
+}/*# sourceMappingURL=atum-list.css.map */
