--- a/assets/css/atum-marketing-popup.css
+++ b/assets/css/atum-marketing-popup.css
@@ -2176,5 +2176,4 @@ input[type=button].btn-block {
 .swal2-container .marketing-popup .mp-logo {
   width: 170px;
   height: auto;
-}
-/*# sourceMappingURL=atum-marketing-popup.css.map */
+}/*# sourceMappingURL=atum-marketing-popup.css.map */
