--- a/assets/css/atum-orders-list-rtl.css
+++ b/assets/css/atum-orders-list-rtl.css
@@ -98,5 +98,4 @@ table.wp-list-table .column-status {
 }
 table.wp-list-table .column-status .order-status {
   margin: 3px 0 0 5px !important;
-}
-/*# sourceMappingURL=atum-orders-list-rtl.css.map */
+}/*# sourceMappingURL=atum-orders-list-rtl.css.map */
