--- a/assets/css/atum-orders-list.css
+++ b/assets/css/atum-orders-list.css
@@ -6211,5 +6211,4 @@ table.wp-list-table .notes_head::after {
 }
 table.wp-list-table .status_head::after {
   content: "\e939";
-}
-/*# sourceMappingURL=atum-orders-list.css.map */
+}/*# sourceMappingURL=atum-orders-list.css.map */
