--- a/assets/css/atum-orders-rtl.css
+++ b/assets/css/atum-orders-rtl.css
@@ -65,5 +65,4 @@
 #atum_order_items .atum_order_items_wrapper table.atum_order_items tbody th:first-child, #atum_order_items .atum_order_items_wrapper table.atum_order_items td:first-child {
   padding-right: 2em;
   padding-left: 1em;
-}
-/*# sourceMappingURL=atum-orders-rtl.css.map */
+}/*# sourceMappingURL=atum-orders-rtl.css.map */
