--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -5072,5 +5072,4 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
 }
 .date-field.with-icon.disabled:after {
   color: rgba(73, 80, 87, 0.6);
-}
-/*# sourceMappingURL=atum-orders.css.map */
+}/*# sourceMappingURL=atum-orders.css.map */
