--- a/assets/css/atum-po-export.css
+++ b/assets/css/atum-po-export.css
@@ -458,5 +458,4 @@ body {
   border: 1px solid #DDD;
   padding: 10px;
   margin-top: 10px;
-}
-/*# sourceMappingURL=atum-po-export.css.map */
+}/*# sourceMappingURL=atum-po-export.css.map */
