--- a/assets/css/atum-post-type-list.css
+++ b/assets/css/atum-post-type-list.css
@@ -6100,5 +6100,4 @@ table.wp-list-table .column-groups th.actions, .floatThead-container .column-gro
   .wrap .wp-heading-inline a.page-title-action {
     padding: 0 12px;
   }
-}
-/*# sourceMappingURL=atum-post-type-list.css.map */
+}/*# sourceMappingURL=atum-post-type-list.css.map */
