--- a/assets/css/atum-product-data-rtl.css
+++ b/assets/css/atum-product-data-rtl.css
@@ -115,5 +115,4 @@
 .btn-group > .btn-group:not(:first-child) > .btn {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-}
-/*# sourceMappingURL=atum-product-data-rtl.css.map */
+}/*# sourceMappingURL=atum-product-data-rtl.css.map */
