--- a/assets/css/atum-product-data.css
+++ b/assets/css/atum-product-data.css
@@ -3572,5 +3572,4 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
 }
 .atum-attachments-list .atum-attachment-icon i {
   font-size: 6rem;
-}
-/*# sourceMappingURL=atum-product-data.css.map */
+}/*# sourceMappingURL=atum-product-data.css.map */
