--- a/assets/css/atum-search-orders.css
+++ b/assets/css/atum-search-orders.css
@@ -1504,5 +1504,4 @@ input.atum-post-search:focus, input.atum-post-search:active {
 #atum-search-by-column .dropdown-item:hover, #atum-search-by-column .dropdown-item.active, #atum-search-by-column .dropdown-item:focus, #atum-search-by-column .dropdown-item:active {
   background-color: var(--primary-dark);
   color: var(--primary-var-dark);
-}
-/*# sourceMappingURL=atum-search-orders.css.map */
+}/*# sourceMappingURL=atum-search-orders.css.map */
