--- a/assets/css/atum-settings-rtl.css
+++ b/assets/css/atum-settings-rtl.css
@@ -48,5 +48,4 @@
 .atum-settings-wrapper .atum-nav-link .menu-helper i {
   margin-right: 0px;
   margin-left: 7px;
-}
-/*# sourceMappingURL=atum-settings-rtl.css.map */
+}/*# sourceMappingURL=atum-settings-rtl.css.map */
