--- a/assets/css/atum-settings.css
+++ b/assets/css/atum-settings.css
@@ -5719,5 +5719,4 @@ input[type=search]::placeholder {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
-}
-/*# sourceMappingURL=atum-settings.css.map */
+}/*# sourceMappingURL=atum-settings.css.map */
