--- a/assets/css/atum-suppliers.css
+++ b/assets/css/atum-suppliers.css
@@ -2342,5 +2342,4 @@ body.allow-multiple-suppliers .wc-backbone-modal .alert {
 
 .atum-meta-box .form-field .wpml-ls .select2-container {
   width: auto !important;
-}
-/*# sourceMappingURL=atum-suppliers.css.map */
+}/*# sourceMappingURL=atum-suppliers.css.map */
