--- a/assets/css/atum-post-type-list-rtl.css
+++ b/assets/css/atum-post-type-list-rtl.css
@@ -83,5 +83,4 @@ table.atum-list-table th.sortable.numeric a > span:first-child {
 #posts-filter .nav-with-scroll-effect .subsubsub li:first-child {
   padding-left: 0px;
   padding-right: 10px;
-}
-/*# sourceMappingURL=atum-post-type-list-rtl.css.map */
+}/*# sourceMappingURL=atum-post-type-list-rtl.css.map */
