--- a/assets/css/atum-addons-rtl.css
+++ b/assets/css/atum-addons-rtl.css
@@ -7,4 +7,15 @@
  * License : ©2025 Stock Management Labs 
  */
 
- .atum-addons h1{display:-webkit-box;display:-ms-flexbox;display:flex}.atum-addons .theme .show-key{right:auto;left:0}.atum-addons .theme .theme-actions{right:auto}
+ .atum-addons h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.atum-addons .theme .show-key {
+  right: auto;
+  left: 0;
+}
+.atum-addons .theme .theme-actions {
+  right: auto;
+}/*# sourceMappingURL=atum-addons-rtl.css.map */
