--- a/assets/css/atum-addons-rtl.css
+++ b/assets/css/atum-addons-rtl.css
@@ -1,21 +1,10 @@
 /** 
  * ATUM Inventory Management for WooCommerce - CSS 
- * @version 1.9.49.1 
+ * @version 1.9.50 
  * @author BE REBEL  
  *
  * Author URI: https://berebel.studio 
  * License : ©2025 Stock Management Labs 
  */
 
- .atum-addons h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.atum-addons .theme .show-key {
-  right: auto;
-  left: 0;
-}
-.atum-addons .theme .theme-actions {
-  right: auto;
-}/*# sourceMappingURL=atum-addons-rtl.css.map */
+ .atum-addons h1{display:-webkit-box;display:-ms-flexbox;display:flex}.atum-addons .theme .show-key{right:auto;left:0}.atum-addons .theme .theme-actions{right:auto}
